--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ section h2 {
   border-radius: 50%;
   margin: 15px;
   border: 3px solid black;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .project-box .pic-box img {
