--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ section h2 {
   border: 3px solid black;
   border-radius: 50%;
   margin: 15px;
-  
+  overflow: hidden;
 }
 
 .project-box .pic-box img {
@@ -377,7 +377,7 @@ section h2 {
     transform: translateX(-100%);
     height: 100vh;
     border-right: 4px solid salmon;
-    background-color: #252525;
+    background-color: salmon;
     transition: transform .3s;
   }
 
