--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 
 * {
   box-sizing: border-box;
-  font-size: 12px;
   font-family: "Poppins", sans-serif;
   text-decoration: none;
   color: black;
@@ -13,6 +12,7 @@ body {
   background-color: #eaeaea;
   cursor: default;
   margin: 0;
+  font-size: 12px;
 }
 
 img {
@@ -20,15 +20,20 @@ img {
 }
 
 .container {
-  max-width: 820px;
+  /*max-width: 820px;*/
+  width: 100vw;
   background-color: rgb(195, 255, 230);
   margin: 0 auto;
   box-shadow: 0px 0px 10px black;
+  /* Css Smooth Scroll */
+  scroll-snap-type: y mandatory;
 }
 
+
 .title {
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: bold;
+  letter-spacing: 5px;
   color: #30AC9A;
   text-shadow:
     -2px -2px 2px white,
@@ -47,6 +52,10 @@ nav {
   top: 0;
 }
 
+nav .link {
+  letter-spacing: 2px;
+}
+
 nav ul {
   margin: 0;
   padding: 0;
@@ -63,14 +72,14 @@ nav ul li a, li label {
   padding: 0 15px;
   border-left: 1px solid black;
   transition: 0.3s;
-  font-size: 1.2rem;
+  font-size: 1.2em;
 }
 
 nav ul li:nth-child(2) a {
   border: none;
 }
 
-nav ul li a:hover {
+nav ul li a:hover, nav ul li label:hover {
   color: salmon;
   font-weight: bolder;
 }
@@ -90,7 +99,7 @@ section {
 }
 
 .jumbotron h1 {
-  font-size: 2.2rem;
+  font-size: 2.2em;
 }
 
 .jumbotron .thumbnail {
@@ -113,7 +122,7 @@ section {
 }
 
 section h2 {
-  font-size: 1.8rem;
+  font-size: 1.5em;
 }
 
 
@@ -125,8 +134,9 @@ section h2 {
 }
 
 #about p {
-  font-size: 1rem;
+  font-size: 0.8em;
 }
+
 
 .area-content {
   display: grid;
@@ -157,7 +167,7 @@ section h2 {
 
 .skill-box .title-box {
   background-color: lightblue;
-  font-size: 1.1rem;
+  font-size: 0.68em;
   font-weight: bold;
   padding: 10px;
   border-radius: 5px 5px 0px 0px;
@@ -179,6 +189,7 @@ section h2 {
 
 .grade-box p {
   text-shadow: 0px 0px 1px black;
+  font-size: 0.54em;
   margin: 0;
 }
 
@@ -273,7 +284,7 @@ section h2 {
 }
 
 .project-box .caption a {
-  font-size: 1.2rem;
+  font-size: 1.2em;
   transition: 0.3s;
 }
 
@@ -300,15 +311,39 @@ section h2 {
   transform: translateX(0%) rotate(0deg);
 }
 
-#contact {
-  display: none;
+#contact form {
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0px 0px 10px black;
+  text-align: left;
+  font-weight: 800;
+  position: relative;
 }
-
-
+fieldset {
+  border: none;
+}
+form input {
+  padding: 1em 1.2em;
+  border-radius: 5px;
+  width: 100%;
+}
+form textarea {
+  width: 100%;
+  padding: 1em 1.2em;
+  font-size: 14px;
+}
+#submit {
+  float: right;
+  padding: 0.2em 0.7em;
+  border-radius: 5px;
+  font-size: 0.8em;
+  background-color: #1FD3F3;
+}
+/*
 #contact.show {
   display: flex;
 }
-
+*/
 .menu-title,
 #contactBtn {
   display: none;
@@ -328,8 +363,8 @@ section h2 {
 }
 
 @media screen and (max-width: 520px) {
-  * {
-    font-size: 16px;
+  body {
+    font-size: 20px;
   }
 
   .menu-btn,
@@ -341,8 +376,8 @@ section h2 {
   .menu-btn {
     position: absolute;
     top: 15px;
-    left: 32px;
-    font-size: 30px;
+    left: 25px;
+    font-size: 1.5em;
     color: #D3D3D3;
     text-shadow: 0px 0px 2px black;
   }
@@ -357,15 +392,36 @@ section h2 {
     text-shadow: 1px 1px 1px black;
     border-bottom: 3px solid cyan;
   }
-
-  .close-menu {
+  
+  section h2 {
+    font-size: 1.2em;
+  }
+  
+  .jumbotron h1 {
+    font-size: 1.5em;
+  }
+  
+  .skill-box .title-box {
+    font-size: 0.8em;
+  }
+  .skill-box .grade-box p, .progress-num {
+    font-size: 0.65em;
+  }
+  .caption {
+    font-size: 0.7em;
+  }
+  #contact fieldset label {
+    font-size: 0.7em;
+  }
+  /*.close-menu {
     position: absolute;
     font-size: 2rem;
     right: 32px;
     top: 18px;
     color: #D3D3D3;
     text-shadow: 0px 0px 1px black;
-  }
+    z-index: 999;
+  }*/
 
   .close-menu.show {
     opacity: 1;
@@ -377,7 +433,7 @@ section h2 {
 
   nav {
     position: fixed;
-    width: 80%;
+    width: 100%;
     transform: translateX(-100%);
     height: 100vh;
     border-right: 4px solid salmon;
@@ -406,13 +462,14 @@ section h2 {
     transition: .3s;
   }
 
-  nav ul li a:hover, li label:hover {
+  nav ul li a:hover, nav ul li label:hover {
     color: cyan;
   }
 
   .menu-title {
     text-align: center;
     font-size: 1.5rem;
+    letter-spacing: 2px;
     color: cyan;
     border: none;
     font-weight: bolder;
