--- a/css/style.css
+++ b/css/style.css
@@ -311,53 +311,15 @@ section h2 {
   transform: translateX(0%) rotate(0deg);
 }
 
-#contact form {
-  background-color: #fff;
-  border-radius: 15px;
-  box-shadow: 0px 0px 10px black;
-  text-align: left;
-  font-weight: 800;
-  position: relative;
-}
-fieldset {
-  border: none;
-}
-form input {
-  padding: 1em 1.2em;
-  border-radius: 5px;
-  width: 100%;
-}
-form textarea {
-  width: 100%;
-  padding: 1em 1.2em;
-  font-size: 14px;
-}
-#submit {
-  float: right;
-  padding: 0.2em 0.7em;
-  border-radius: 5px;
-  font-size: 0.8em;
-  background-color: #1FD3F3;
-}
-/*
-#contact.show {
-  display: flex;
-}
-*/
-.menu-title,
-#contactBtn {
+.menu-title {
   display: none;
 }
 
-#menu-btn,
-#close-menu {
+#menu-btn {
   opacity: 0;
   position: absolute;
 }
-
-
-
-.close-menu, .menu-btn {
+ .menu-btn {
   opacity: 0;
   transition: 0.3s;
 }
@@ -410,23 +372,7 @@ form textarea {
   .caption {
     font-size: 0.7em;
   }
-  #contact fieldset label {
-    font-size: 0.7em;
-  }
-  /*.close-menu {
-    position: absolute;
-    font-size: 2rem;
-    right: 32px;
-    top: 18px;
-    color: #D3D3D3;
-    text-shadow: 0px 0px 1px black;
-    z-index: 999;
-  }*/
-
-  .close-menu.show {
-    opacity: 1;
-  }
-
+  
   nav.transform {
     transform: translateX(0%);
   }
