--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,71 @@ section h2 {
   transform: translateX(0%) rotate(0deg);
 }
 
+
+#contact {
+  background-color: #232323;
+  padding: 30px;
+}
+#contact h2, #contact p {
+  color: #fff;
+  top: 0;
+  text-shadow: 0px 0px 3px black;
+}
+#contact .wrapper {
+  display: block;
+  text-align: left;
+  position: relative;
+  padding: 0;
+}
+#contact .wrapper h2 {
+  margin: 0;
+}
+
+#contact .contact-links {
+  display: flex;
+}
+#contact .contact-links i {
+  padding: 5px 6px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin-top: 5px;
+  transition: font-size 500ms;
+}
+
+.links {
+  margin: 15px 0px 0px 20px;
+}
+
+.links a{
+  color: #fff;
+  font-size: 0.7em;
+  transition: all 500ms;
+  cursor: default;
+}
+.links:hover a {
+  color: #60C8FC;
+  font-weight: 1000;
+  font-size: 0.75em;
+  text-decoration: underline;
+}
+.links:hover i {
+  font-size: 1.2em;
+}
+i.fa-facebook-square {
+  color: #0B18A9;
+}
+i.fa-instagram-square {
+  color: #ED29AC;
+}
+i.fa-whatsapp-square {
+  color: #128E0B;
+}
+i.fa-envelope {
+  color: #EE2E2E;
+  padding: 5px !important;
+}
+
+
 .menu-title {
   display: none;
 }
@@ -443,5 +508,8 @@ section h2 {
   .project-box span {
     width: 100px;
     height: 100px;
+  }
+  #contact .contact-links {
+    display: block;
   }
 }
