--- a/css/style.css
+++ b/css/style.css
@@ -2,524 +2,530 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 * {
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-  text-decoration: none;
-  color: black;
+   box-sizing: border-box;
+   font-family: "Poppins", sans-serif;
+   text-decoration: none;
+   color: black;
 }
 
 body {
-  background-color: #eaeaea;
-  cursor: default;
-  margin: 0;
-  font-size: 20px;
+   background-color: #eaeaea;
+   cursor: default;
+   margin: 0;
+   font-size: 20px;
 }
 
 img {
-  width: 100%;
+   width: 100%;
 }
 
 .container {
-  /*max-width: 820px;*/
-  width: 100vw;
-  background-color: rgb(195, 255, 230);
-  margin: 0 auto;
-  box-shadow: 0px 0px 10px black;
-  /* Css Smooth Scroll */
-  scroll-snap-type: y mandatory;
+   /*max-width: 820px;*/
+   width: 100vw;
+   background-color: rgb(195, 255, 230);
+   margin: 0 auto;
+   box-shadow: 0px 0px 10px black;
+   /* Css Smooth Scroll */
+   scroll-snap-type: y mandatory;
 }
 
 
 .title {
-  font-size: 3em;
-  font-weight: bold;
-  letter-spacing: 5px;
-  color: #30AC9A;
-  text-shadow:
-    -2px -2px 2px white,
-    2px 2px 2px black;
-  cursor: default;
-  width: 100%;
-  padding: 15px 30px;
-  margin: 0;
-  background-color: #D7D7D7;
+   font-size: 3em;
+   font-weight: bold;
+   letter-spacing: 5px;
+   color: #30AC9A;
+   text-shadow:
+   -2px -2px 2px white,
+   2px 2px 2px black;
+   cursor: default;
+   width: 100%;
+   padding: 15px 30px;
+   margin: 0;
+   background-color: #D7D7D7;
 }
 
 nav {
-  background-color: #F1F1F1;
-  width: 100%;
-  z-index: 10;
-  position: sticky;
-  top: 0;
+   background-color: #F1F1F1;
+   width: 100%;
+   z-index: 10;
+   position: sticky;
+   top: 0;
 }
 
 nav .link {
-  letter-spacing: 2px;
+   letter-spacing: 2px;
 }
 
 nav ul {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-  border-bottom: 5px solid salmon;
+   margin: 0;
+   padding: 0;
+   display: flex;
+   list-style: none;
+   border-bottom: 5px solid salmon;
 }
 
 nav ul li {
-  padding: 15px 0;
+   padding: 15px 0;
 }
 
 nav ul li a, li label {
-  padding: 0 15px;
-  border-left: 1px solid black;
-  transition: 0.3s;
-  font-size: 0.8em;
+   padding: 0 15px;
+   border-left: 1px solid black;
+   transition: 0.3s;
+   font-size: 0.8em;
 }
 
 nav ul li:nth-child(2) a {
-  border: none;
+   border: none;
 }
 
 nav ul li a:hover, nav ul li a.active {
-  color: salmon;
-  font-weight: bolder;
+   color: salmon;
+   font-weight: bolder;
 }
 
 section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-align: center;
 }
 
 .wrapper,
 .jumbotron {
-  margin: 10px;
-  padding: 30px;
-  width: 100%;
+   margin: 10px;
+   padding: 30px;
+   width: 100%;
 }
 
 .jumbotron h1 {
-  font-size: 2.2em;
+   font-size: 2.2em;
 }
 
 .jumbotron .thumbnail {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(235, 164, 99);
-  border: 5px solid white;
-  border-radius: 50%;
-  position: relative;
+   width: 300px;
+   height: 300px;
+   display: flex;
+   margin: auto;
+   justify-content: center;
+   align-items: center;
+   background-color: rgb(235, 164, 99);
+   border: 5px solid white;
+   border-radius: 50%;
+   position: relative;
 }
 
 .jumbotron .thumbnail img {
-  position: absolute;
-  width: 100%;
-  border-radius: 50%;
+   position: absolute;
+   width: 100%;
+   border-radius: 50%;
 }
 
 section h2 {
-  font-size: 1.5em;
+   font-size: 1.5em;
 }
 
 
 #about .wrapper,
 #project .wrapper {
-  background-color: rgb(255, 182, 113);
-  box-shadow: inset 0px 1.5px 10px black;
-  border-radius: 5px;
+   background-color: rgb(255, 182, 113);
+   box-shadow: inset 0px 1.5px 10px black;
+   border-radius: 5px;
 }
 
 #about p {
-  font-size: 0.8em;
+   font-size: 0.8em;
 }
 
 
 .area-content {
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: 1fr 1fr;
-  grid-template-areas:
-    'content1 content2'
-    'content1 content2'
-    'content3 content3';
+   display: grid;
+   grid-gap: 15px;
+   grid-template-columns: 1fr 1fr;
+   grid-template-areas:
+   'content1 content2'
+   'content1 content2'
+   'content3 content3';
 }
 
 .microsoft {
-  grid-area: content1;
+   grid-area: content1;
 }
 
 .programming {
-  grid-area: content2;
+   grid-area: content2;
 }
 
 .graphic {
-  grid-area: content3;
+   grid-area: content3;
 }
 
 .skill-box {
-  box-shadow: 0px 0px 10px black;
-  border-radius: 5px;
+   box-shadow: 0px 0px 10px black;
+   border-radius: 5px;
+   opacity: 0;
+   transform: translate(0,40px);
+   transition: 1s;
 }
-
+.muncul {
+   opacity: 1;
+   transform: translate(0,0);
+}
 .skill-box .title-box {
-  background-color: lightblue;
-  font-size: 1em;
-  font-weight: bold;
-  padding: 10px;
-  border-radius: 5px 5px 0px 0px;
+   background-color: lightblue;
+   font-size: 1em;
+   font-weight: bold;
+   padding: 10px;
+   border-radius: 5px 5px 0px 0px;
 }
 
 .skill-box .content-box {
-  background-color: #686868;
-  padding: 15px 30px;
-  border-radius: 0px 0px 5px 5px;
+   background-color: #686868;
+   padding: 15px 30px;
+   border-radius: 0px 0px 5px 5px;
 }
 
 .content-box .grade-box {
-  background-color: white;
-  padding: 10px;
-  margin: 15px auto;
-  border-radius: 5px;
-  box-shadow: -1px -1px 2px white, 1px 1px 2px black;
+   background-color: white;
+   padding: 10px;
+   margin: 15px auto;
+   border-radius: 5px;
+   box-shadow: -1px -1px 2px white, 1px 1px 2px black;
 }
 
 .grade-box p {
-  text-shadow: 0px 0px 1px black;
-  font-size: 0.54em;
-  margin: 0;
+   text-shadow: 0px 0px 1px black;
+   font-size: 0.54em;
+   margin: 0;
 }
 
 .grade-box .progress-box {
-  display: flex;
+   display: flex;
 }
 
 .progress-box .progress-num {
-  margin-right: 10px;
-  color: lightblue;
-  text-shadow: 0px 0px 1px black;
+   margin-right: 10px;
+   color: lightblue;
+   text-shadow: 0px 0px 1px black;
 }
 
 .progress-box .progress-bar {
-  width: 100%;
-  background-color: #E3E3E3;
-  box-shadow: inset 0px 0px 3px black;
-  border-radius: 3px;
-  padding: 1.5px;
+   width: 100%;
+   background-color: #E3E3E3;
+   box-shadow: inset 0px 0px 3px black;
+   border-radius: 3px;
+   padding: 1.5px;
 }
 
 .progress-box .progress-bar .progress {
-  background-color: lime;
-  height: 100%;
-  border-radius: 3px 0px 0px 3px;
-  width: 0%;
-  transition: width 0.5s;
+   background-color: lime;
+   height: 100%;
+   border-radius: 3px 0px 0px 3px;
+   width: 0%;
+   transition: width 1s;
 }
 
-.grade-box:hover .progress.m-word {
-  width: 90%;
+.m-word .progress.fill {
+   width: 90%;
 }
 
-.grade-box:hover .progress.m-excel {
-  width: 40%;
+.m-excel .progress.fill {
+   width: 40%;
 }
 
-.grade-box:hover .progress.m-point {
-  width: 80%;
+.m-point .progress.fill {
+   width: 80%;
 }
 
-.grade-box:hover .progress.javascript {
-  width: 60%;
+.javascript .progress.fill {
+   width: 60%;
 }
 
-.grade-box:hover .progress.php {
-  width: 30%;
+.php .progress.fill {
+   width: 30%;
 }
 
-.grade-box:hover .progress.python {
-  width: 50%;
+.python .progress.fill {
+   width: 50%;
 }
 
-.grade-box:hover .progress.coreldraw {
-  width: 70%;
+.coreldraw .progress.fill {
+   width: 70%;
 }
 
-.grade-box:hover .progress.photoshop {
-  width: 60%;
+.photoshop .progress.fill {
+   width: 60%;
 }
 
 
 
 .project-box {
-  background-color: white;
-  display: flex;
-  align-items: center;
-  box-shadow: 0px 0px 10px black;
-  border-radius: 150px;
-  position: relative;
-  cursor: default;
+   background-color: white;
+   display: flex;
+   align-items: center;
+   box-shadow: 0px 0px 10px black;
+   border-radius: 150px;
+   position: relative;
+   cursor: default;
 }
 
 .project-box .pic-box {
-  width: 150px;
-  height: 150px;
-  border: 3px solid black;
-  border-radius: 50%;
-  margin: 15px;
-  overflow: hidden;
+   width: 150px;
+   height: 150px;
+   border: 3px solid black;
+   border-radius: 50%;
+   margin: 15px;
+   overflow: hidden;
 }
 
 .project-box .pic-box img {
-  border-radius: 50%;
-  transform: translateX(-100%) rotate(-180deg);
-  transition: transform .5s;
+   border-radius: 50%;
+   transform: translateX(-100%) rotate(-180deg);
+   transition: transform .5s;
 }
 
 .project-box .caption {
-  font-weight: bolder;
-  text-shadow: 0px 0px 1px black;
+   font-weight: bolder;
+   text-shadow: 0px 0px 1px black;
 }
 
 .project-box .caption a {
-  font-size: 1.5em;
-  transition: 0.3s;
+   font-size: 1.5em;
+   transition: 0.3s;
 }
 
 .caption a:hover {
-  color: #747474;
+   color: #747474;
 }
 
 .project-box span {
-  width: 150px;
-  height: 150px;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 50%;
-  left: 15px;
-  opacity: 1;
-  transition: opacity 0.5s;
+   width: 150px;
+   height: 150px;
+   position: absolute;
+   background-color: rgba(0, 0, 0, 0.4);
+   border-radius: 50%;
+   left: 15px;
+   opacity: 1;
+   transition: opacity 0.5s;
 }
 
 .project-box:hover>span {
-  opacity: 0;
+   opacity: 0;
 }
 .project-box:hover > .caption a {
-  border-bottom: 2px solid salmon;
+   border-bottom: 2px solid salmon;
 }
 .project-box:hover .pic-box img {
-  transform: translateX(0%) rotate(0deg);
+   transform: translateX(0%) rotate(0deg);
 }
 
 
 #contact {
-  background-color: #232323;
-  padding: 30px;
+   background-color: #232323;
+   padding: 30px;
 }
 #contact h2, #contact p {
-  color: #fff;
-  top: 0;
-  text-shadow: 0px 0px 3px black;
+   color: #fff;
+   top: 0;
+   text-shadow: 0px 0px 3px black;
 }
 #contact .wrapper {
-  display: block;
-  text-align: left;
-  position: relative;
-  padding: 0;
+   display: block;
+   text-align: left;
+   position: relative;
+   padding: 0;
 }
 #contact .wrapper h2 {
-  margin: 0;
+   margin: 0;
 }
 
 #contact .contact-links {
-  display: flex;
+   display: flex;
 }
 #contact .contact-links i {
-  padding: 5px 6px;
-  border-radius: 50%;
-  background-color: #fff;
-  margin-top: 5px;
-  transition: font-size 500ms;
+   padding: 5px 6px;
+   border-radius: 50%;
+   background-color: #fff;
+   margin-top: 5px;
+   transition: font-size 500ms;
 }
 
 .links {
-  margin: 15px 0px 0px 20px;
+   margin: 15px 0px 0px 20px;
 }
 
-.links a{
-  color: #fff;
-  font-size: 0.7em;
-  transition: all 500ms;
-  cursor: default;
+.links a {
+   color: #fff;
+   font-size: 0.7em;
+   transition: all 500ms;
+   cursor: default;
 }
 .links:hover a {
-  color: #60C8FC;
-  font-weight: 1000;
-  font-size: 0.75em;
-  text-decoration: underline;
+   color: #60C8FC;
+   font-weight: 1000;
+   font-size: 0.75em;
+   text-decoration: underline;
 }
 .links:hover i {
-  font-size: 1.2em;
+   font-size: 1.2em;
 }
 i.fa-facebook-square {
-  color: #0B18A9;
+   color: #0B18A9;
 }
 i.fa-instagram-square {
-  color: #ED29AC;
+   color: #ED29AC;
 }
 i.fa-whatsapp-square {
-  color: #128E0B;
+   color: #128E0B;
 }
 i.fa-envelope {
-  color: #EE2E2E;
-  padding: 5px !important;
+   color: #EE2E2E;
+   padding: 5px !important;
 }
 
 
 .menu-title, .tes {
-  display: none;
+   display: none;
 }
 
 #menu-btn {
-  opacity: 0;
-  position: absolute;
+   opacity: 0;
+   position: absolute;
 }
- .menu-btn {
-  opacity: 0;
-  transition: 0.3s;
+.menu-btn {
+   opacity: 0;
+   transition: 0.3s;
 }
 
 @media screen and (max-width: 520px) {
-  body {
-    font-size: 20px;
-  }
+   body {
+      font-size: 20px;
+   }
 
-  .menu-btn,
-  .menu-title {
-    display: block;
-    opacity: 1;
-  }
+   .menu-btn,
+   .menu-title {
+      display: block;
+      opacity: 1;
+   }
 
-  .menu-btn {
-    position: fixed;
-    top: 20px;
-    left: 25px;
-    font-size: 1.5em;
-    color: #D3D3D3;
-    text-shadow: 0px 0px 2px black;
-    z-index: 10;
-  }
-  .tes {
-    display: block;
-  }
-  .tes:hover + nav {
-    transform: translateX(0%);
-  }
-  .title {
-    font-size: 1.5rem;
-    position: sticky;
-    top: 0;
-    text-align: center;
-    background-color: white;
-    z-index: 1;
-    text-shadow: 1px 1px 1px black;
-    border-bottom: 3px solid cyan;
-  }
-  section h2 {
-    font-size: 1.2em;
-  }
-  
-  .jumbotron h1 {
-    font-size: 1.5em;
-  }
-  
-  .skill-box .title-box {
-    font-size: 0.8em;
-  }
-  .skill-box .grade-box p, .progress-num {
-    font-size: 0.65em;
-  }
-  .caption {
-    font-size: 0.7em;
-  }
+   .menu-btn {
+      position: fixed;
+      top: 20px;
+      left: 25px;
+      font-size: 1.5em;
+      color: #D3D3D3;
+      text-shadow: 0px 0px 2px black;
+      z-index: 10;
+   }
+   .tes {
+      display: block;
+   }
+   .tes:hover + nav {
+      transform: translateX(0%);
+   }
+   .title {
+      font-size: 1.5rem;
+      position: sticky;
+      top: 0;
+      text-align: center;
+      background-color: white;
+      z-index: 1;
+      text-shadow: 1px 1px 1px black;
+      border-bottom: 3px solid cyan;
+   }
+   section h2 {
+      font-size: 1.2em;
+   }
 
-  nav {
-    position: fixed;
-    width: 100%;
-    transform: translateX(-100%);
-    height: 100vh;
-    border-right: 4px solid salmon;
-    background-color: #252525;
-    transition: transform .3s;
-  }
+   .jumbotron h1 {
+      font-size: 1.5em;
+   }
 
-  nav ul {
-    flex-direction: column;
-    border: none;
+   .skill-box .title-box {
+      font-size: 0.8em;
+   }
+   .skill-box .grade-box p, .progress-num {
+      font-size: 0.65em;
+   }
+   .caption {
+      font-size: 0.7em;
+   }
 
-  }
+   nav {
+      position: fixed;
+      width: 100%;
+      transform: translateX(-100%);
+      height: 100vh;
+      border-right: 4px solid salmon;
+      background-color: #252525;
+      transition: transform .3s;
+   }
 
-  nav ul li {
-    border-bottom: 1px solid aqua;
+   nav ul {
+      flex-direction: column;
+      border: none;
 
-  }
-  
-  nav ul li:last-child {
-    border: none;
-  }
+   }
 
-  nav ul li a{
-    color: white;
-    border: none;
-    transition: .3s;
-    font-size: 0.8em;
-  }
+   nav ul li {
+      border-bottom: 1px solid aqua;
 
-  nav ul li a:hover, nav ul li a.active {
-    color: cyan;
-  }
+   }
 
-  .menu-title {
-    text-align: center;
-    font-size: 1.5rem;
-    letter-spacing: 2px;
-    color: cyan;
-    border: none;
-    font-weight: bolder;
-    text-shadow: 1px -1px 1px white;
-  }
+   nav ul li:last-child {
+      border: none;
+   }
 
-  .area-content {
-    display: block;
-  }
+   nav ul li a {
+      color: white;
+      border: none;
+      transition: .3s;
+      font-size: 0.8em;
+   }
 
-  .skill-box {
-    margin: 15px 0;
-  }
+   nav ul li a:hover, nav ul li a.active {
+      color: cyan;
+   }
 
-  .project-box {
-    border-radius: 80px;
-    margin: 15px 0;
-  }
+   .menu-title {
+      text-align: center;
+      font-size: 1.5rem;
+      letter-spacing: 2px;
+      color: cyan;
+      border: none;
+      font-weight: bolder;
+      text-shadow: 1px -1px 1px white;
+   }
 
-  .project-box .pic-box {
-    width: 100px;
-    height: 100px;
-  }
-  .project-box .caption a {
-    font-size: 1.2em;
-  }
-  .project-box span {
-    width: 100px;
-    height: 100px;
-  }
-  #contact {
-    padding: 10px;
-  }
-  #contact .contact-links, .links {
-    display: block;
-  }
+   .area-content {
+      display: block;
+   }
+
+   .skill-box {
+      margin: 15px 0;
+   }
+
+   .project-box {
+      border-radius: 80px;
+      margin: 15px 0;
+   }
+
+   .project-box .pic-box {
+      width: 100px;
+      height: 100px;
+   }
+   .project-box .caption a {
+      font-size: 1.2em;
+   }
+   .project-box span {
+      width: 100px;
+      height: 100px;
+   }
+   #contact {
+      padding: 10px;
+   }
+   #contact .contact-links, .links {
+      display: block;
+   }
 }
